Name:               kansas-lava
Version:            0.2.3.0
Synopsis:           Kansas Lava is a hardware simulator and VHDL generator.

		    (c) 2009 The University of Kansas; BSD3 license.

Category:            Language
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          Andy Gill <andygill@ku.edu>
Copyright:           (c) 2009 The University of Kansas
Homepage:            http://ittc.ku.edu/~andygill/kansas-lava.php
Stability:	     alpha
build-type: 	     Simple
Cabal-Version:       >= 1.10
Data-files: Prelude/VHDL/*.vhd, Prelude/HTML/*.inc

Flag all
  Description: Enable full development tree
  Default:     False

Flag unit
  Description: Enable unit testing binary
  Default:     True

Flag tools
  Description: Enable extra tool binary
  Default:     True

Library

  Build-Depends: base >= 4 && < 5, containers, data-reify == 0.6, pretty,
                 dotgen  >= 0.4.1, array, template-haskell, sized-types >= 0.3.4,
                 directory, random, netlist >= 0.3.1, netlist-to-vhdl >= 0.3.1, process,
                 fgl, filepath, data-default, unix, bytestring, mtl, strict, cmdargs==0.8
  Exposed-modules:
       Language.KansasLava
       Language.KansasLava.DOT
       Language.KansasLava.Entity
       Language.KansasLava.Fabric
       Language.KansasLava.Optimization
       Language.KansasLava.Probes
       Language.KansasLava.Protocols
       Language.KansasLava.Rep
       Language.KansasLava.RTL
       Language.KansasLava.Signal
       Language.KansasLava.Test
       Language.KansasLava.Types
       Language.KansasLava.Utils
       Language.KansasLava.VHDL
       Language.KansasLava.Stream
       Language.KansasLava.Dynamic
       Language.KansasLava.VCD
       Language.KansasLava.Trace
  Other-modules:
       Language.KansasLava.Internal
       Language.KansasLava.Rep.TH
       Language.KansasLava.Rep.Class
       Language.KansasLava.Netlist.Decl
       Language.KansasLava.Netlist.Inst
       Language.KansasLava.Netlist.Utils
       Language.KansasLava.Protocols.Enabled
       Language.KansasLava.Protocols.Memory
       Language.KansasLava.Protocols.AckBox
       Language.KansasLava.Protocols.ReadyBox
       Language.KansasLava.Protocols.Types
       Language.KansasLava.Protocols.Patch
       Paths_kansas_lava



-- hack for now
--  Hs-Source-Dirs: ., ../sized-types
-- need a module refactor to address the orphan warnings
  Ghc-Options: -Wall  -Werror -fno-warn-orphans
  default-language:    Haskell2010


--  Ghc-Prof-options:  -auto-all

Executable kansas-lava-unittest
    if flag(unit)
      -- Build-Depends: base,  hpc, strict, kansas-lava, sized-types, data-default
      Build-Depends: base >= 4 && < 5, containers, data-reify == 0.6, pretty,
                 dotgen  >= 0.4.1, array, template-haskell, sized-types >= 0.3.4,
                 directory, random, netlist >= 0.3.1, netlist-to-vhdl >= 0.3.1, process,
                 fgl, filepath, data-default, unix, bytestring, mtl, strict, cmdargs==0.8
      buildable: True
      Other-modules:
    else
      Build-depends: base
      buildable: False
    Main-Is:        Main.hs
    Hs-Source-Dirs: ., tests
    Ghc-Options: -Wall  -Werror
                 -fno-warn-orphans -fcontext-stack=256
                 -threaded -rtsopts
    default-language:    Haskell2010

Executable kansas-lava-testreport
    if flag(unit)
      -- Build-Depends: base, strict, kansas-lava
      Build-Depends: base >= 4 && < 5, containers, data-reify == 0.6, pretty,
                 dotgen  >= 0.4.1, array, template-haskell, sized-types >= 0.3.4,
                 directory, random, netlist >= 0.3.1, netlist-to-vhdl >= 0.3.1, process,
                 fgl, filepath, data-default, unix, bytestring, mtl, strict, cmdargs==0.8
      buildable: True
      Other-modules:
    else
      Build-depends: base
      buildable: False
    Main-Is:        GenReport.hs
    Hs-Source-Dirs:  ., tests
    Ghc-Options: -Wall  -Werror -fno-warn-incomplete-patterns
                 -fno-warn-orphans -fcontext-stack=256
    default-language:    Haskell2010

Executable tbf2vcd
    if flag(tools)
      Build-Depends: base >= 4 && < 5, containers, data-reify == 0.6, pretty,
                 dotgen  >= 0.4.1, array, template-haskell, sized-types >= 0.3.4,
                 directory, random, netlist >= 0.3.1, netlist-to-vhdl >= 0.3.1, process,
                 fgl, filepath, data-default, unix, bytestring, mtl, strict, cmdargs==0.8
      buildable: True
      Other-modules:
    else
      Build-depends: base
      buildable: False
    Main-Is:        TBF2VCD.hs
    Hs-Source-Dirs: ., tools
    Ghc-Options: -Wall  -Werror -fno-warn-orphans
    default-language:    Haskell2010

-- Test-suite test-shallow
--     type: exitcode-stdio-1.0
--     main-is: Main.hs
--     build-depends: base, kansas-lava, sized-types, data-default
--     Ghc-Options: -Wall  -Werror -fno-warn-orphans -fcontext-stack=50
--     Hs-source-dirs: tests
