Name:               kansas-lava
Version:            0.2.4
Synopsis:           Kansas Lava is a hardware simulator and VHDL generator.

Description: 
  Kansas Lava is a Domain Specific Language (DSL) for expressing
  hardware-oriented descriptions of computations, and is hosted inside
  the language Haskell. Kansas Lava programs are descriptions of
  specific hardware entities, the connections between them, and other
  computational abstractions that can compile down to these entities.

Category:            Language, Hardware
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          Andy Gill <andygill@ku.edu>
Copyright:           (c) 2009-2011 The University of Kansas
Homepage:            http://ittc.ku.edu/csdl/fpg/Tools/KansasLava
Stability:           alpha
build-type:          Simple
Cabal-Version:       >= 1.10
Data-files: 
   Prelude/VHDL/*.vhd, 
   Prelude/HTML/*.inc
extra-source-files:   
   tests/Makefile
   README

Flag all
  Description: Enable full development tree
  Default:     False

Flag unit
  Description: Enable unit testing binary
  Default:     False

Flag tools
  Description: Enable extra tool binary
  Default:     False

Library
  Build-Depends: 
        base >= 4 && < 5, 
        dotgen >= 0.4.1,
        containers,
        sized-types >= 0.3.4,
        data-default,
        random,
        strict,
        filepath,
        directory,
        cmdargs==0.8,
        process,
        netlist >= 0.3.1,
        netlist-to-vhdl >= 0.3.1,
        template-haskell, 
        bytestring,
        data-reify == 0.6
  Exposed-modules:
       Language.KansasLava
       Language.KansasLava.DOT
       Language.KansasLava.Entity
       Language.KansasLava.Fabric
       Language.KansasLava.Optimization
       Language.KansasLava.Probes
       Language.KansasLava.Protocols
       Language.KansasLava.Rep
       Language.KansasLava.RTL
       Language.KansasLava.Signal
       Language.KansasLava.Test
       Language.KansasLava.Types
       Language.KansasLava.Utils
       Language.KansasLava.VHDL
       Language.KansasLava.Stream
       Language.KansasLava.Dynamic
       Language.KansasLava.VCD
  Other-modules:
       Language.KansasLava.Internal
       Language.KansasLava.Rep.TH
       Language.KansasLava.Rep.Class
       Language.KansasLava.Netlist.Decl
       Language.KansasLava.Netlist.Inst
       Language.KansasLava.Netlist.Utils
       Language.KansasLava.Protocols.Enabled
       Language.KansasLava.Protocols.Memory
       Language.KansasLava.Protocols.AckBox
       Language.KansasLava.Protocols.ReadyBox
       Language.KansasLava.Protocols.Types
       Language.KansasLava.Protocols.Patch
       Language.KansasLava.VCD.EventList
       Paths_kansas_lava

-- need a module refactor to address the orphan warnings
  Ghc-Options: -Wall  -fno-warn-orphans
  default-language:    Haskell2010

--  Ghc-Prof-options:  -auto-all

Executable kansas-lava-unittest
    if flag(unit) || flag(all)
      buildable: True
      Build-Depends:
        base >= 4 && < 5,
        dotgen >= 0.4.1,
        containers,
        sized-types >= 0.3.4,
        data-default,
        random,
        strict,
        filepath,
        directory,
        cmdargs==0.8,
        process,
        netlist >= 0.3.1,
        netlist-to-vhdl >= 0.3.1,
        template-haskell, 
        bytestring,
        data-reify == 0.6
      Other-modules:
         Coerce Matrix Memory Others Protocols Regression
    else
      Build-depends: base
      buildable: False
    Main-Is:        Main.hs
    Hs-Source-Dirs: ., tests
    Ghc-Options: -Wall 
                 -fno-warn-orphans -fcontext-stack=256
                 -threaded -rtsopts
    default-language:    Haskell2010

Executable kansas-lava-testreport
    if flag(unit) || flag(all)
      buildable: True
      Build-Depends:
        base >= 4 && < 5,
        dotgen >= 0.4.1,
        containers,
        sized-types >= 0.3.4,
        data-default,
        random,
        strict,
        filepath,
        directory,
        cmdargs==0.8,
        process,
        netlist >= 0.3.1,
        netlist-to-vhdl >= 0.3.1,
        template-haskell, 
        bytestring,
        data-reify == 0.6
      Other-modules:
    else
      Build-depends: base
      buildable: False
    Main-Is:        GenReport.hs
    Hs-Source-Dirs:  ., tests
    Ghc-Options: -Wall  -fno-warn-incomplete-patterns
                 -fno-warn-orphans -fcontext-stack=256
    default-language:    Haskell2010

Executable kansas-lava-tbf2vcd
    if flag(tools) || flag(all)
      Build-Depends:
        base >= 4 && < 5,
        dotgen >= 0.4.1,
        containers,
        sized-types >= 0.3.4,
        data-default,
        random,
        strict,
        filepath,
        directory,
        cmdargs==0.8,
        process,
        netlist >= 0.3.1,
        netlist-to-vhdl >= 0.3.1,
        template-haskell, 
        bytestring,
        data-reify == 0.6
      buildable: True
    else
      Build-depends: base
      buildable: False
    Main-Is:        TBF2VCD.hs
    Hs-Source-Dirs: ., tools
    Ghc-Options: -Wall  -fno-warn-orphans
    default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/ku-fpg/kansas-lava.git
