Name:               kansas-lava
Version:            0.2.5
Synopsis:           Kansas Lava is a hardware simulator and VHDL generator.

Description:
  Kansas Lava is a Domain Specific Language (DSL) for expressing
  hardware-oriented descriptions of computations, and is hosted inside
  the language Haskell. Kansas Lava programs are descriptions of
  specific hardware entities, the connections between them, and other
  computational abstractions that can compile down to these entities.

Category:            Language, Hardware
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill
Maintainer:          Andy Gill <andygill@ku.edu>
Copyright:           (c) 2009-2013 The University of Kansas
Homepage:            http://www.ittc.ku.edu/csdl/fpg/software/kansas-lava.html
Stability:           alpha
build-type:          Simple


-- (We actually require >= ghc 7.6, because we the kind Nat.)
--
-- should be >= 1.12, but that will force
-- people to ghc 7.4. Don't try to run
-- 'cabal haddock' with 1.10.
-- TODO: change this when everyone on 7.4
--
Cabal-Version:       >= 1.10
Data-files:
   Prelude/VHDL/*.vhd,
   Prelude/HTML/*.inc
extra-source-files:
   tests/Makefile
   README

Flag all
  Description: Enable full development tree
  Default:     False

Flag unit
  Description: Enable unit testing binary
  Default:     False

Flag tools
  Description: Enable extra tool binary
  Default:     False

Library
  Build-Depends:
        base >= 4 && < 5,
        containers,
        array,
        sized-types >= 0.4.1.1,
        mtl >= 2.0,
        data-default,
        random,
        strict,
        stm >= 2.2,
        transformers >= 0.2.2,
        filepath,
        directory,
        process,
        netlist >= 0.3.1,
        netlist-to-vhdl >= 0.3.1,
        template-haskell,
        bytestring,
        data-reify >= 0.6,
        deepseq >= 1.3,
        Boolean >= 0.2,
        singletons
  Exposed-modules:
       Language.KansasLava
       Language.KansasLava.Fabric
       Language.KansasLava.Optimization
       Language.KansasLava.Probes
       Language.KansasLava.Protocols
       Language.KansasLava.Rep
       Language.KansasLava.Signal
       Language.KansasLava.Spark
       Language.KansasLava.Types
       Language.KansasLava.Utils
       Language.KansasLava.Universal
       Language.KansasLava.Internal
       Language.KansasLava.VHDL
       Language.KansasLava.Stream
       Language.KansasLava.VCD
       FED
  Other-modules:
       Language.KansasLava.Rep.TH
       Language.KansasLava.Rep.Class
       Language.KansasLava.Netlist.Decl
       Language.KansasLava.Netlist.Inst
       Language.KansasLava.Netlist.Utils
       Language.KansasLava.Protocols.Enabled
       Language.KansasLava.Protocols.Memory
       Language.KansasLava.Protocols.Types
       Paths_kansas_lava

-- need a module refactor to address the orphan warnings
  Ghc-Options: -Wall  -fno-warn-orphans  -fcontext-stack=100
-- -Werror
  default-language:    Haskell2010

--  Ghc-Prof-options:  -auto-all

Executable kansas-lava-test
    if flag(unit) || flag(all)
      buildable: True
      Build-Depends:
        base >= 4 && < 5,
        containers,
        array,
        sized-types >= 0.4.1.1,
        mtl >= 2.0,
        data-default,
        random,
        strict,
        stm >= 2.2,
        transformers >= 0.2.2,
        filepath,
        directory,
        process,
        netlist >= 0.3.1,
        netlist-to-vhdl >= 0.3.1,
        template-haskell,
        bytestring,
        data-reify >= 0.6,
        deepseq >= 1.3,
        Boolean >= 0.2,
        sized-types >= 0.4.1.1,
        array,
        data-default,
        random,
        strict,
        filepath,
        directory,
        cmdargs >= 0.8,
        shake >= 0.8,
        containers >= 0.5

      Other-modules:
         Test Coerce Matrix Memory Others Protocols Regression
    else
      Build-depends: base
      buildable: False
    Main-Is:        Shake.hs
    Hs-Source-Dirs: . tests
    Ghc-Options: -Wall
                 -fno-warn-orphans -fcontext-stack=256
                 -threaded -rtsopts
    default-language:    Haskell2010


source-repository head
  type:     git
  location: git://github.com/ku-fpg/kansas-lava.git
